# rainbow

./: .gitignore  CMakeLists.txt
hdl/: counter.v  counter_tb.v  decoder.v  decoder_tb.v  display.v  display_tb.v  divider.v  divider_tb.v  pixel.v  pixel_tb.v  segment.v  segment_tb.v
sim/: counter_tb.cpp  decoder_tb.cpp  display_tb.cpp  divider_tb.cpp  pixel_tb.cpp  segment_tb.cpp
